# Simulator-v2

./: .gitignore  CMakeLists.txt  LICENSE  README.md  apply_llm_model_support.sh  apply_pipeline.py  compile.py  conftest.py  llm_model_support_patch.diff  mkdocs.yml
benchmarks/: .gitignore
benchmarks/Deeplabv3/: template.yml
benchmarks/MiniLM/: batch_matmul_kernel_cluster_hw_defines.h  config.yml
benchmarks/MobileVit/: .gitignore
benchmarks/Qwen2.5-Math-1.5B/: template.yml
benchmarks/YOLOv5/: requirements.sh
benchmarks/common/: CRunnerUtils.cpp  Makefile  generateConfigYAML.py  generateCustomizedRuntime.py  generateTopAccel.py  m5ops.h  syscalls.c
benchmarks/wavelet_transform/: config.yml  defines.h
docs/: building.md  dev.md  index.md  llm_compiler_refactor.md  requirements.txt  user_guide.md
lib/: CMakeLists.txt  __init__.py
llm_backend_out/: backend.ll  backend_metrics.json  optimized.mlir  runtime_launch.c
llm_compile_out/: README.txt  compilation_summary.md  compile_manifest.json  decode_attention_stage3.fuse.mlir  decode_attention_stage3.outline.mlir  decode_attention_stage3.tile.mlir  decode_attention_stage3_driver.c  estimated_metrics.json  kernel_registry.json  llama_prefill.fuse.mlir  llama_prefill.outline.mlir  llama_prefill.tile.mlir  llama_prefill_driver.c  model_profiles.json  pass_pipeline.json  runtime_plan.json
perf_out/: perf_report.json  perf_report.md
src/: new_config_parser.py
test/: test_driver_gen.py  test_stage2_compile.py  test_stage3_framework.py  test_stage4_pipeline.py  test_transform_gen.py
tools/: profile_gem5.py
(+99 files in other folders)
